--- a/style.css
+++ b/style.css
@@ -33,3 +33,12 @@
     display: flex;
     flex-direction: row; /* Элементы будут располагаться по горизонтали */
 }
+
+.input-side {
+    height: 80vh;
+    float: left;
+    width: 20%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.82);
+}
