--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-.title{
-    font-family: Tahoma, serif;
-    background: linear-gradient(to right, red, orange, yellow, green, cyan, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
 .plain{
     font-family: Tahoma, serif;
-    background: linear-gradient(to right, red, orange, yellow, green, cyan, blue);
+    background: white;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
         /*color: white*/
 }
+
+.table{
+    font-family: Tahoma, serif;
+    background: white;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    table-layout:fixed;
+}
+
 
 .plain2{
     font-family: Tahoma, serif;
@@ -23,7 +26,7 @@
 
 .graph-side {
     height: 80vh;
-    width: 40%;
+    width: 71%;
     text-align: center;
     border: 1px solid #000000;
     border-radius: 5px;
@@ -41,4 +44,88 @@
     border: 1px solid black;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.82);
+}
+
+.bubbly-button {
+    font-family: "Helvetica", "Arial", sans-serif;
+    display: inline-block;
+    font-size: 1em;
+    padding: 1em 2em;
+    margin-top: 100px;
+    margin-bottom: 60px;
+    -webkit-appearance: none;
+    appearance: none;
+    -webkit-text-fill-color: white;
+    background-color: #d000ff;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+    box-shadow: 0 2px 25px #d000ff;
+}
+.bubbly-button:focus {
+    outline: 0;
+}
+.bubbly-button:before, .bubbly-button:after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 140%;
+    height: 100%;
+    left: -20%;
+    z-index: -1000;
+    transition: all ease-in-out 0.5s;
+    background-repeat: no-repeat;
+}
+.bubbly-button:before {
+    display: none;
+    top: -75%;
+    background-image: radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, transparent 20%, #d000ff 20%, transparent 30%), radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, transparent 10%, #282020 15%, transparent 20%), radial-gradient(circle, #282020 20%, transparent 20%), radial-gradient(circle, #282020 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+}
+.bubbly-button:after {
+    display: none;
+    bottom: -75%;
+    background-image: radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, transparent 20%, #d000ff 20%, transparent 30%), radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, #d000ff 20%, transparent 20%), radial-gradient(circle, transparent 10%, #282020 15%, transparent 20%), radial-gradient(circle, #282020 20%, transparent 20%), radial-gradient(circle, #282020 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+    background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+}
+.bubbly-button:active {
+    transform: scale(0.9);
+    background-color: #d000ff;
+    box-shadow: 0 2px 25px #d000ff;
+}
+.bubbly-button.animate:before {
+    display: block;
+    animation: topBubbles ease-in-out 0.75s forwards;
+}
+.bubbly-button.animate:after {
+    display: block;
+    animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+
+@keyframes topBubbles {
+    0% {
+        background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+    }
+    50% {
+        background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+    }
+    100% {
+        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
+}
+@keyframes bottomBubbles {
+    0% {
+        background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+    }
+    50% {
+        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+    }
+    100% {
+        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
 }
